# straddle_backtest_engine

./: hyperparameter_tuning.py  main.py  pyproject.toml  readme.md  rough.py  setup.cfg
app_config/: __init__.py  app_config.py  credentials.yml
assets/: backtest_results_20251029_204528.csv  hyperparam_results_20251028_193719.csv  intraday_pnl_all_20251029_204528.csv  net_returns_report.html
backtest_results/: backtest_results_20251025_115055.csv  backtest_results_20251026_152945.csv  backtest_results_20251026_174353.csv  backtest_results_20251028_212243.csv  backtest_results_20251028_215705.csv  backtest_results_20251101_121856.csv  daily_summary_20251025_115055.csv  daily_summary_20251026_152946.csv  daily_summary_20251026_174353.csv  daily_summary_20251026_231207.csv  daily_summary_20251028_212258.csv  daily_summary_20251028_215715.csv  daily_summary_20251101_121910.csv  intraday_pnl_2025-10-24_reentry_0_20251025_115055.csv  intraday_pnl_2025-10-24_reentry_1_20251025_115055.csv  intraday_pnl_2025-10-24_reentry_2_20251025_115055.csv  intraday_pnl_2025-10-24_reentry_3_20251025_115055.csv  intraday_pnl_2025-10-24_reentry_4_20251025_115055.csv  intraday_pnl_2025-10-24_reentry_5_20251025_115055.csv  intraday_pnl_all_20251026_152946.csv  intraday_pnl_all_20251101_121910.csv  net_returns_report.html  performance_metrics_20251025_115055.csv  performance_metrics_20251026_152946.csv  performance_metrics_20251026_174353.csv  performance_metrics_20251026_231207.csv  performance_metrics_20251028_212258.csv  performance_metrics_20251028_215715.csv  (+1 more)
data/: __init__.py  (+2 more)
(+24 files in other folders)
