[metadata]
name = straddle_backtest_engine
version = 0.1.0
author = Aman
description = Modular Straddle Backtest Engine
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent